add start script and endpoints get user info
