# docs/swagger.json
@@ -14,7 +14,7 @@
       "url": "http://localhost:3000"
     },
     {
-      "url": "https://example.com/api/v1"
+      "url": "https://E-pharmacy-frontend/api/v1"
     }
   ],
   "tags": [
@@ -36,6 +36,34 @@
     }
   ],
   "paths": {
+    "/api/user/user-info": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Get for user info",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Current user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/user"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          }
+        }
+      }
+    },
     "/api/user/logout": {
       "get": {
         "tags": [
@@ -737,6 +765,30 @@
       }
     },
     "schemas": {
+      "user": {
+        "type": "object",
+        "required": [
+          "nama",
+          "email",
+          "phone",
+          "password"
+        ],
+        "properties": {
+          "nama": {
+            "type": "string",
+            "example": "John Doe"
+          },
+          "email": {
+            "type": "string",
+            "format": "email",
+            "example": "john.doe@example.com"
+          },
+          "phone": {
+            "type": "string",
+            "example": "+380991234567"
+          }
+        }
+      },
       "login": {
         "type": "object",
         "required": [
