# src/routers/auth.js
@@ -1,8 +1,9 @@
 import { Router } from "express";
 import { ctrlWrapper } from "../utils/ctrlWrapper.js";
-import { loginUserController, logoutUserController, registeruserController } from "../controllers/aurh.js";
+import { getUserInfoController, loginUserController, logoutUserController, registeruserController } from "../controllers/aurh.js";
 import { validateBody } from "../middlewares/validateBody.js";
 import { loginUserSchema, registerUserSchema } from "../validation/auth.js";
+import {authenticate} from "../middlewares/authenticate.js";
 
 const router = Router();
 
@@ -17,5 +18,10 @@ router.post('/api/user/login',
 );
 router.post('/api/user/logout',
     ctrlWrapper(logoutUserController),
+);
+
+router.get('/api/user/user-info',
+    authenticate,
+    ctrlWrapper(getUserInfoController),
 );
 export default router;
